tests/ui/lazy-type-alias/leading-where-clause.stderr
error: where clauses are not allowed before the type for type aliases
  --> $DIR/leading-where-clause.rs:10:1
   |
LL | / where
LL | |     String: From<T>,
   | |____________________^
   |
   = note: see issue #89122 <https://github.com/rust-lang/rust/issues/89122> for more information
help: move it to the end of the type declaration
   |
LL + 
LL ~ = T where String: From<T>;
   |

error: where clauses are not allowed before the type for type aliases
  --> $DIR/leading-where-clause.rs:15:1
   |
LL | / where
LL | |     String: From<T>,
   | |____________________^
   |
   = note: see issue #89122 <https://github.com/rust-lang/rust/issues/89122> for more information
help: move it to the end of the type declaration
   |
LL + 
LL | = (T, U)
LL | where
LL ~     U: Copy, String: From<T>;
   |

error: where clauses are not allowed before the type for type aliases
  --> $DIR/leading-where-clause.rs:21:24
   |
LL | pub type EmptyLeading0 where = ();
   |                        ^^^^^
   |
   = note: see issue #89122 <https://github.com/rust-lang/rust/issues/89122> for more information
help: move it to the end of the type declaration
   |
LL - pub type EmptyLeading0 where = ();
LL + pub type EmptyLeading0  = () where;
   |

error: where clauses are not allowed before the type for type aliases
  --> $DIR/leading-where-clause.rs:24:27
   |
LL | pub type EmptyLeading1<T> where = T where T: Copy;
   |                           ^^^^^ help: remove this `where`
   |
   = note: see issue #89122 <https://github.com/rust-lang/rust/issues/89122> for more information

error: aborting due to 4 previous errors

